fixed visibleTiles, ship it to prod

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -6,8 +6,8 @@ html, body {
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    column-count: 3;
-    column-gap: 40px;
+    /* column-count: 3;
+    column-gap: 40px; */
 }
 
 #other-player-stub {
